--- a/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
@@ -140,74 +140,74 @@
             </li>
 
             @*<li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-address-book"></i>
-                <span>Bảng Điểm</span>
-            </a>
-        </li>
+                    <a class="nav-link" href="charts.html">
+                        <i class="fas fa-fw fa-address-book"></i>
+                        <span>Bảng Điểm</span>
+                    </a>
+                </li>
 
 
-        <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-book"></i>
-                <span>Danh Sách Lớp</span>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-book"></i>
-                <span>Danh Sách Lớp</span>
-            </a>
-        </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="charts.html">
+                        <i class="fas fa-fw fa-book"></i>
+                        <span>Danh Sách Lớp</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="charts.html">
+                        <i class="fas fa-fw fa-book"></i>
+                        <span>Danh Sách Lớp</span>
+                    </a>
+                </li>
 
-        <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="far fa-fw fa-chart-bar"></i>
-                <span>Thống Kê</span>
-            </a>
-        </li>
-        <!-- Nav Item - Utilities Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                <i class="fas fa-fw fa-wrench"></i>
-                <span>Utilities</span>
-            </a>
-            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Utilities:</h6>
-                    <a class="collapse-item" href="utilities-color.html">Colors</a>
-                    <a class="collapse-item" href="utilities-border.html">Borders</a>
-                    <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                    <a class="collapse-item" href="utilities-other.html">Other</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="charts.html">
+                        <i class="far fa-fw fa-chart-bar"></i>
+                        <span>Thống Kê</span>
+                    </a>
+                </li>
+                <!-- Nav Item - Utilities Collapse Menu -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+                        <i class="fas fa-fw fa-wrench"></i>
+                        <span>Utilities</span>
+                    </a>
+                    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <h6 class="collapse-header">Custom Utilities:</h6>
+                            <a class="collapse-item" href="utilities-color.html">Colors</a>
+                            <a class="collapse-item" href="utilities-border.html">Borders</a>
+                            <a class="collapse-item" href="utilities-animation.html">Animations</a>
+                            <a class="collapse-item" href="utilities-other.html">Other</a>
+                        </div>
+                    </div>
+                </li>
+
+                <!-- Divider -->
+                <hr class="sidebar-divider">
+
+                <!-- Heading -->
+                <div class="sidebar-heading">
+                    Administrator
                 </div>
-            </div>
-        </li>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider">
-
-        <!-- Heading -->
-        <div class="sidebar-heading">
-            Administrator
-        </div>
-
-        <!-- Nav Item - Pages Collapse Menu -->
-        <!-- Nav Item - Charts -->
-        <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-user"></i>
-                <span>Quản Lý Tài Khoản</span>
-            </a>
-        </li>
+                <!-- Nav Item - Pages Collapse Menu -->
+                <!-- Nav Item - Charts -->
+                <li class="nav-item">
+                    <a class="nav-link" href="charts.html">
+                        <i class="fas fa-fw fa-user"></i>
+                        <span>Quản Lý Tài Khoản</span>
+                    </a>
+                </li>
 
 
-        <!-- Nav Item - Charts -->
-        <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-database"></i>
-                <span>Sao Lưu</span>
-            </a>
-        </li>*@
+                <!-- Nav Item - Charts -->
+                <li class="nav-item">
+                    <a class="nav-link" href="charts.html">
+                        <i class="fas fa-fw fa-database"></i>
+                        <span>Sao Lưu</span>
+                    </a>
+                </li>*@
 
 
 
@@ -478,8 +478,15 @@
     <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
+    <!-- Ignite UI Required Combined CSS Files -->
 
+    <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
 
+    <!-- Ignite UI Required Combined JavaScript Files -->
+    <script src="http://cdn-na.infragistics.com/igniteui/2019.1/latest/js/infragistics.core.js"></script>
+    <script src="http://cdn-na.infragistics.com/igniteui/2019.1/latest/js/infragistics.lob.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 
