add view, export excel,...

--- a/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <title>Hệ Thống QL Giáo Viên</title>
     <!-- Ignite UI Required Combined CSS Files -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="~/vendor/select2/select2.min.css">
 
     <!-- Custom fonts for this template-->
     <link href="~/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
@@ -487,6 +487,8 @@
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="http://cdn-na.infragistics.com/igniteui/2019.1/latest/js/infragistics.core.js"></script>
     <script src="http://cdn-na.infragistics.com/igniteui/2019.1/latest/js/infragistics.lob.js"></script>
+    <script src="~/vendor/select2/select2.min.js"></script>
+    <script src="~/Scripts/customize.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 
