--- a/QLGiaoVien/QLGiaoVien/Views/NghienCuu/_DanhSach.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/NghienCuu/_DanhSach.cshtml
@@ -5,8 +5,11 @@
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
-        <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Hướng dẫn</h6>
+        <div class="card-header py-3 row">
+            <h6 class="m-0 font-weight-bold text-primary col-10">Nghiên cứu</h6>
+            <button type="button" class="col-2 btn btn-primary" onclick="Features.doPost('/NghienCuu/_ChiTiet', {}, false, 'modal-body');Features.isUpdate=false" data-toggle="modal" data-target="#exampleModal">
+                Thêm mới
+            </button>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -14,11 +17,12 @@
                     <thead>
                         <tr>
                             <th>STT</th>
-                            <th>Tên công trình khoa học</th>
+                            <th width="500px">Tên công trình khoa học</th>
                             <th>Loại</th>
                             <th>Vai trò</th>
                             <th>Số tác giả</th>
                             <th>Giờ chuẩn</th>
+                            <th>Thao tác</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -29,23 +33,27 @@
                                 <tr class="bg-gray-500 font-weight-bold">
                                     <td>@(i + 1)</td>
                                     <td colspan="4">@Model[i].TenNhomNCKH</td>
-                                    <td>@Model[i].TongSoGio</td>
+                                    <td>@Model[i].TongSoGio.ToString("N0")</td>
+                                    <td></td>
                                 </tr>
                                 for (int j = 0; j < Model[i].ChiTiet.Count; j++)
                                 {
                                     <tr>
                                         <td class="pl-5">@(j + 1)</td>
-                                        <td>@Model[i].ChiTiet[j].TenDeTai</td>
+                                        <td  width="500px">@Model[i].ChiTiet[j].TenDeTai @if (!@Model[i].ChiTiet[j].SoTrang.Equals(0)) {<text>(@Model[i].ChiTiet[j].SoTrang trang)</text> }</td>
                                         <td>@Model[i].ChiTiet[j].TenLoai</td>
                                         <td>@Model[i].ChiTiet[j].TenVaiTro</td>
                                         <td>@Model[i].ChiTiet[j].SoTacGia</td>
                                         <td>@(Model[i].ChiTiet[j].SoGioChuan.ToString("N0"))</td>
+                                        <td><i data-toggle="modal" data-target="#exampleModal" onclick="Features.doPost('/NghienCuu/_ChiTiet', {'ID':@Model[i].ChiTiet[j].id}, false, 'modal-body');Features.isUpdate=true" class="fas fa-edit"></i> / <i onclick="Features.Delete('/Ajax/NghienCuu_Xoa', {'ID':@Model[i].ChiTiet[j].id})" class="fas fa-trash"></i></td>
+
                                     </tr>
                                 }
                             }
                             <tr class="bg-gray-500 font-weight-bold">
                                 <td colspan="5">Tổng số</td>
                                 <td>@Model.Sum(x=>x.TongSoGio).ToString("N0")</td>
+                                <td></td>
                             </tr>
                         }
 
@@ -57,3 +65,32 @@
 
 </div>
 <!-- /.container-fluid -->
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Hướng Dẫn</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                <button type="button" class="btn btn-primary" onclick="saveChanges()">Lưu</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    function saveChanges() {
+        const obj = Features.getValueFromModal();
+        if(!obj) return;
+         obj.MaGV = +$("#GV").val();
+         obj.MaNamHoc = +$("#Nam").val();
+        console.log(obj)
+         Features.doPost("/Ajax/NghienCuu_ThemSua", { obj: obj ,isUpdate:Features.isUpdate}, true);
+    }
+</script>
