--- a/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         @*<h6 class="collapse-header">Custom Components:</h6>*@
                         @*<a class="collapse-item" href="@Url.Action("Index", "GiaoVien")>Giáo Viên</a>*@
-                        <a class="collapse-item" href="@Url.Action("Index", "GiaoVien")">Giáo Viên </a>
+                        <a class="collapse-item" href="@Url.Action("Index", "NghienCuu")">Chi Tiết </a>
                     </div>
                 </div>
             </li>
@@ -112,7 +112,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         @*<h6 class="collapse-header">Custom Components:</h6>*@
                         @*<a class="collapse-item" href="@Url.Action("Index", "GiaoVien")>Giáo Viên</a>*@
-                        <a class="collapse-item" href="@Url.Action("Index", "GiaoVien")">Giáo Viên </a>
+                        <a class="collapse-item" href="@Url.Action("Index", "HuongDan")">Chi Tiết</a>
                     </div>
                 </div>
             </li>
